flux/apps/int/homeassistant/bifrost.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bifrost
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: bifrost
  template:
    metadata:
      labels:
        app: bifrost
    spec:
      containers:
        - name: bifrost
          image: ghcr.io/chrivers/bifrost:master-2025-06-02
          workingDir: /data
          ports:
            - containerPort: 80
              name: http
            - containerPort: 443
              name: https
          volumeMounts:
            - mountPath: /data
              name: ha-storage
              subPath: bifrost
      volumes:
        - name: ha-storage
          persistentVolumeClaim:
            claimName: ha-storage-pvc
        - name: config-template
          configMap:
            name: bifrost-config-template
---
apiVersion: v1
kind: Service
metadata:
  name: bifrost
spec:
  type: NodePort
  selector:
    app: bifrost
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30180
      name: http
    - port: 443
      targetPort: 443
      nodePort: 30443
      name: https
