flux/apps/int/homeassistant/mosquitto.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
        - name: mosquitto
          image: eclipse-mosquitto:2.0
          ports:
            - containerPort: 1883
              name: mqtt
          volumeMounts:
            - mountPath: /mosquitto/config/mosquitto.conf
              name: config
              subPath: mosquitto.conf
            - mountPath: /mosquitto/data
              name: ha-storage
              subPath: mosquitto
      volumes:
        - name: config
          configMap:
            name: mosquitto-config
        - name: ha-storage
          persistentVolumeClaim:
            claimName: ha-storage-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
spec:
  selector:
    app: mosquitto
  ports:
    - port: 1883
      targetPort: 1883
      name: mqtt
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-nodeport 
spec:
  type: NodePort
  selector:
    app: mosquitto
  ports:
    - port: 1883
      targetPort: 1883
      nodePort: 31883 # needed by Tasmota
      name: mqtt
