flux/apps/int/homeassistant/deployment.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homeassistant-route
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik-int
  hostnames:
    - "homeassistant.vpn.lab.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homeassistant
          port: 8123
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      containers:
        - image: homeassistant/home-assistant:2026.1.3
          name: home-assistant
          volumeMounts:
            - mountPath: /config
              name: ha-storage
      volumes:
        - name: ha-storage
          persistentVolumeClaim:
            claimName: ha-storage-pvc
        - name: config-template
          configMap:
            name: homeassistant-config-template
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
spec:
  selector:
    app: homeassistant
  ports:
    - protocol: TCP
      port: 8123
      name: http
