flux/apps/int/homeassistant/zigbee2mqtt.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zigbee2mqtt
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: zigbee2mqtt
  template:
    metadata:
      labels:
        app: zigbee2mqtt
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        supplementalGroups: [20]
      containers:
        - name: zigbee2mqtt
          image: koenkk/zigbee2mqtt:latest
          ports:
            - containerPort: 8080
              name: http
          securityContext:
            privileged: true
          volumeMounts:
            - mountPath: /app/data
              name: ha-storage
              subPath: zigbee2mqtt
            - mountPath: /dev/ttyUSB0
              name: zigbee-device
      volumes:
        - name: ha-storage
          persistentVolumeClaim:
            claimName: ha-storage-pvc
        - name: config-template
          configMap:
            name: zigbee2mqtt-config-template
        - name: zigbee-device
          hostPath:
            path: /dev/ttyUSB0
            type: CharDevice
---
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
spec:
  selector:
    app: zigbee2mqtt
  ports:
    - port: 8080
      targetPort: 8080
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt-nodeport
spec:
  type: NodePort
  selector:
    app: zigbee2mqtt
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
      name: http
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zigbee2mqtt-route
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik-int
  hostnames:
    - "zigbee2mqtt.vpn.lab.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: zigbee2mqtt
          port: 8080
